[gd_scene load_steps=12 format=4 uid="uid://ch78wtnj4trnx"]

[ext_resource type="Script" path="res://scenes/levels/godot_level.gd" id="1_scb70"]
[ext_resource type="TileSet" uid="uid://cm56c1q4xohp" path="res://tilesets/level.tres" id="2_xttr1"]
[ext_resource type="PackedScene" uid="uid://biic2547l5toc" path="res://scenes/player.tscn" id="3_odtnp"]
[ext_resource type="PackedScene" uid="uid://crsxndxw8txua" path="res://autoload/linker.tscn" id="4_bghdb"]
[ext_resource type="PackedScene" uid="uid://b4umid4o0374w" path="res://scenes/gui/tutorial_overlay.tscn" id="5_put66"]
[ext_resource type="PackedScene" uid="uid://do4wixgs8kjnw" path="res://scenes/gui/minimap.tscn" id="6_c657l"]
[ext_resource type="PackedScene" uid="uid://dlcgj3ddcrssp" path="res://autoload/screen_shaker.tscn" id="7_nm33y"]
[ext_resource type="PackedScene" uid="uid://cs4exxqtdhqlk" path="res://scenes/transition.tscn" id="8_0ftc1"]
[ext_resource type="PackedScene" uid="uid://b36rc3j7qvys1" path="res://scenes/gui/pause_menu.tscn" id="9_ew0cm"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vnt2c"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_r6erj"]
light_mode = 1

[node name="GodotLevel" type="Node2D"]
process_mode = 3
script = ExtResource("1_scb70")

[node name="bg" type="TileMapLayer" parent="."]
material = SubResource("CanvasItemMaterial_vnt2c")
use_parent_material = true
tile_map_data = PackedByteArray("AADu//n/AQAFAAEAAADu//r/AQAGAAYAAADu//z/AQAGAAYAAADu//3/AQAEAAQAAADu//7/AQAGAAYAAADu////AQAGAAQAAADu/wAAAQAGAAIAAADu/wEAAQABAAUAAADu/wIAAQAEAAQAAADu/wMAAQAEAAMAAADu/wQAAQABAAQAAADu/wUAAQABAAYAAADu/wYAAQAFAAIAAADu/wcAAQAFAAYAAADu/wgAAQAFAAMAAADu/wkAAQAGAAIAAADv/wkAAQABAAYAAADw/wkAAQAEAAIAAADx//b/AQAGAAIAAADx/wkAAQABAAYAAADy//b/AQADAAIAAADy/wkAAQAFAAUAAADz//b/AQAGAAQAAADz/wkAAQAEAAUAAAD0//b/AQAEAAYAAAD0/wkAAQABAAIAAAD1//b/AQAGAAYAAAD1/wkAAQAEAAYAAAD2//b/AQABAAUAAAD2/wkAAQAEAAUAAAD3//b/AQADAAYAAAD3/wkAAQABAAUAAAD4//b/AQABAAIAAAD4/wkAAQABAAQAAAD5//b/AQAGAAUAAAD5/wkAAQAGAAYAAAD6//b/AQAGAAMAAAD6/wkAAQAEAAQAAAD7//b/AQADAAIAAAD7/wkAAQAFAAQAAAD8//b/AQADAAYAAAD8/wkAAQAGAAMAAAD9//b/AQABAAQAAAD9/wkAAQAEAAUAAAD+//b/AQAEAAQAAAD+/wkAAQABAAMAAAD///b/AQABAAMAAAD//wkAAQAGAAQAAAAAAPb/AQAEAAQAAAAAAAkAAQADAAMAAAABAPb/AQABAAYAAAABAAkAAQAGAAIAAAACAPb/AQABAAQAAAACAAkAAQAGAAYAAAADAPb/AQAFAAYAAAADAAkAAQABAAYAAAAEAPb/AQAFAAYAAAAEAAkAAQADAAIAAAAFAPb/AQAEAAUAAAAFAAkAAQAFAAUAAAAGAPb/AQABAAQAAAAGAAkAAQAGAAYAAAAHAPb/AQAFAAIAAAAHAAkAAQABAAUAAAAIAPb/AQABAAQAAAAIAAkAAQAFAAYAAAAJAPb/AQABAAYAAAAJAAkAAQAEAAUAAAAKAPb/AQABAAUAAAAKAAkAAQAEAAMAAAALAPb/AQAGAAYAAAALAAkAAQAEAAMAAAAMAPb/AQABAAIAAAAMAAkAAQABAAQAAAANAPb/AQACAAQAAAANAAkAAQACAAYAAAAOAPb/AQAGAAUAAAAOAAkAAQADAAQAAAAPAPb/AQAEAAUAAAAPAAkAAQAGAAUAAAAQAPb/AQADAAYAAAAQAAkAAQAFAAQAAAARAPb/AQAEAAMAAAARAPf/AQADAAUAAAARAPj/AQAEAAQAAAARAPn/AQAGAAEAAAARAPr/AQAFAAMAAAARAPz/AQAEAAYAAAARAP3/AQAFAAUAAAARAP7/AQAGAAQAAAARAP//AQAEAAMAAAARAAAAAQADAAMAAAARAAEAAQAEAAUAAAARAAIAAQAFAAUAAAARAAMAAQAFAAMAAAARAAQAAQAEAAIAAAARAAUAAQAEAAIAAAARAAYAAQAGAAQAAAARAAcAAQAFAAMAAAARAAgAAQAFAAUAAAARAAkAAQADAAYAAADu//b/AQAFAAIAAADu//f/AQAGAAMAAADu//j/AQADAAQAAADv//b/AQAEAAYAAADw//b/AQAEAAQAAADy//3/AQADAAIAAADy//z/AQABAAIAAADy//r/AQAEAAYAAADy//n/AQAFAAEAAADy//j/AQAGAAQAAADy//f/AQAGAAYAAADx//f/AQAGAAQAAADw//f/AQAEAAYAAADv//f/AQADAAMAAADv//j/AQABAAMAAADv//n/AQAGAAEAAADv//r/AQAFAAYAAADv//z/AQAFAAYAAADv//3/AQADAAYAAADv//7/AQAGAAIAAADv////AQAFAAIAAADv/wAAAQAFAAMAAADv/wEAAQAFAAIAAADv/wIAAQAGAAMAAADv/wMAAQAFAAIAAADv/wQAAQAGAAQAAADv/wUAAQADAAYAAADv/wYAAQADAAQAAADv/wcAAQABAAUAAADv/wgAAQABAAIAAADw/wgAAQAFAAUAAADw/wcAAQADAAUAAADw/wYAAQAEAAUAAADw/wUAAQADAAYAAADw/wQAAQADAAQAAADw/wMAAQABAAUAAADw/wIAAQABAAIAAADw/wEAAQADAAMAAADw/wAAAQAFAAMAAADw////AQAFAAUAAADw//7/AQABAAUAAADw//3/AQAGAAYAAADw//z/AQAFAAYAAADw//r/AQAFAAIAAADw//n/AQADAAEAAADw//j/AQAFAAMAAADx//j/AQAEAAIAAADx//n/AQAEAAEAAADx//r/AQABAAQAAADx//z/AQABAAIAAADx//3/AQAEAAYAAADx//7/AQADAAYAAADx////AQAGAAYAAADx/wAAAQAEAAQAAADx/wEAAQABAAQAAADx/wIAAQAFAAQAAADx/wMAAQABAAIAAADx/wQAAQAFAAYAAADx/wUAAQAEAAQAAADx/wYAAQABAAMAAADx/wcAAQAEAAIAAADx/wgAAQABAAQAAADy/wgAAQADAAIAAADy/wcAAQAGAAIAAADy/wYAAQAEAAUAAADy/wUAAQAGAAQAAADy/wQAAQAFAAUAAADy/wMAAQAEAAYAAADy/wIAAQABAAIAAADy/wEAAQABAAQAAADy/wAAAQAGAAYAAADy////AQAGAAMAAADy//7/AQAGAAMAAADz//7/AQADAAIAAADz//3/AQAEAAQAAADz//z/AQAEAAIAAADz//r/AQAEAAUAAADz//n/AQAGAAEAAADz//j/AQAFAAMAAADz//f/AQADAAIAAAD0//f/AQAEAAUAAAD0//j/AQADAAYAAAD0//n/AQADAAEAAAD0//r/AQAGAAQAAAD0//z/AQAEAAMAAAD0//3/AQAGAAMAAAD0//7/AQADAAIAAAD0////AQAEAAYAAADz////AQABAAUAAADz/wAAAQABAAQAAADz/wEAAQAFAAQAAADz/wIAAQAFAAMAAADz/wMAAQABAAMAAADz/wQAAQADAAUAAADz/wUAAQABAAMAAADz/wYAAQADAAMAAADz/wcAAQAGAAUAAADz/wgAAQAFAAUAAAD0/wgAAQAFAAMAAAD0/wcAAQAFAAYAAAD0/wYAAQAFAAUAAAD0/wUAAQAGAAQAAAD0/wQAAQADAAYAAAD0/wMAAQABAAUAAAD0/wIAAQAFAAIAAAD0/wEAAQAEAAUAAAD0/wAAAQAEAAYAAAD1/wAAAQAFAAUAAAD1////AQAFAAUAAAD1//7/AQAEAAQAAAD1//3/AQABAAIAAAD1//z/AQADAAYAAAD1//r/AQAGAAUAAAD1//n/AQAEAAEAAAD1//j/AQAEAAQAAAD1//f/AQAGAAIAAAD2//f/AQAGAAMAAAD2//j/AQADAAMAAAD2//n/AQAFAAEAAAD2//r/AQAGAAQAAAD2//z/AQAFAAIAAAD2//3/AQAFAAQAAAD2//7/AQABAAQAAAD2////AQADAAIAAAD2/wAAAQAEAAMAAAD2/wEAAQAGAAQAAAD1/wEAAQABAAIAAAD1/wIAAQAGAAMAAAD1/wMAAQADAAIAAAD1/wQAAQADAAQAAAD1/wUAAQADAAIAAAD1/wYAAQAEAAMAAAD1/wcAAQABAAIAAAD1/wgAAQAGAAQAAAD2/wgAAQADAAQAAAD2/wcAAQABAAUAAAD2/wYAAQAFAAMAAAD2/wUAAQADAAQAAAD2/wQAAQAFAAMAAAD2/wMAAQADAAYAAAD2/wIAAQAFAAUAAAD3/wIAAQAGAAIAAAD3/wEAAQAGAAYAAAD3/wAAAQAGAAQAAAD3////AQAEAAIAAAD3//7/AQADAAUAAAD3//3/AQAGAAQAAAD3//z/AQAEAAYAAAD3//r/AQAFAAYAAAD3//n/AQAGAAEAAAD3//j/AQAEAAIAAAD3//f/AQADAAUAAAD4//f/AQABAAYAAAD4//j/AQAFAAMAAAD4//n/AQADAAEAAAD4//r/AQAEAAYAAAD4//z/AQAGAAMAAAD4//3/AQADAAMAAAD4//7/AQADAAMAAAD4////AQAFAAMAAAD4/wAAAQABAAMAAAD4/wEAAQABAAYAAAD4/wIAAQAGAAIAAAD4/wMAAQAEAAYAAAD3/wMAAQADAAYAAAD3/wQAAQAFAAIAAAD3/wUAAQABAAMAAAD3/wYAAQAFAAMAAAD3/wcAAQADAAIAAAD3/wgAAQAGAAIAAAD4/wgAAQAGAAUAAAD4/wcAAQABAAIAAAD4/wYAAQAGAAIAAAD4/wUAAQAEAAMAAAD4/wQAAQAGAAIAAAD5/wQAAQABAAQAAAD5/wMAAQABAAYAAAD5/wIAAQABAAQAAAD5/wEAAQAFAAQAAAD5/wAAAQABAAYAAAD5////AQAEAAQAAAD5//7/AQAEAAQAAAD5//3/AQAGAAUAAAD5//z/AQADAAIAAAD5//r/AQAFAAMAAAD5//n/AQAEAAEAAAD5//j/AQAGAAYAAAD5//f/AQAGAAQAAAD6//f/AQAEAAMAAAD6//j/AQAFAAUAAAD6//n/AQAFAAEAAAD6//r/AQAEAAUAAAD6//z/AQABAAUAAAD6//3/AQAEAAIAAAD6//7/AQADAAYAAAD6////AQAEAAQAAAD6/wAAAQAFAAMAAAD6/wEAAQABAAQAAAD6/wIAAQABAAUAAAD6/wMAAQAFAAQAAAD6/wQAAQAEAAMAAAD6/wUAAQAGAAMAAAD5/wUAAQADAAIAAAD5/wYAAQADAAIAAAD5/wcAAQAGAAIAAAD5/wgAAQADAAIAAAD6/wgAAQABAAYAAAD6/wcAAQAGAAIAAAD6/wYAAQABAAMAAAD7/wYAAQABAAIAAAD7/wUAAQABAAUAAAD7/wQAAQAEAAUAAAD7/wMAAQAEAAMAAAD7/wIAAQADAAMAAAD7/wEAAQAFAAUAAAD7/wAAAQABAAIAAAD7////AQABAAQAAAD7//7/AQADAAMAAAD7//3/AQADAAUAAAD7//z/AQAGAAUAAAD7//r/AQAFAAIAAAD7//n/AQAGAAEAAAD7//j/AQABAAMAAAD7//f/AQAEAAQAAAD8//f/AQAEAAIAAAD8//j/AQAGAAIAAAD8//n/AQADAAEAAAD8//r/AQADAAMAAAD8//z/AQAFAAMAAAD8//3/AQAEAAUAAAD8//7/AQAFAAUAAAD8////AQAEAAIAAAD8/wAAAQABAAIAAAD8/wEAAQADAAYAAAD8/wIAAQAGAAQAAAD8/wMAAQAGAAUAAAD8/wQAAQAFAAMAAAD8/wUAAQAGAAYAAAD8/wYAAQAFAAYAAAD8/wcAAQADAAIAAAD7/wcAAQABAAQAAAD7/wgAAQAFAAQAAAD8/wgAAQADAAMAAAD9/wgAAQAGAAMAAAD9/wcAAQAEAAMAAAD9/wYAAQAEAAIAAAD9/wUAAQADAAIAAAD9/wQAAQADAAQAAAD9/wMAAQADAAUAAAD9/wIAAQAEAAQAAAD9/wEAAQADAAQAAAD9/wAAAQAFAAYAAAD9////AQAGAAYAAAD9//7/AQABAAIAAAD9//3/AQABAAIAAAD9//z/AQAEAAIAAAD9//r/AQADAAUAAAD9//n/AQAEAAEAAAD9//j/AQAGAAYAAAD9//f/AQABAAMAAAD+//f/AQADAAYAAAD+//j/AQABAAMAAAD+//n/AQAFAAEAAAD+//r/AQAEAAIAAAD+//z/AQADAAYAAAD+//3/AQAFAAYAAAD+//7/AQABAAMAAAD+////AQAGAAUAAAD+/wAAAQABAAMAAAD+/wEAAQAGAAYAAAD+/wIAAQAFAAMAAAD+/wMAAQAEAAIAAAD+/wQAAQAGAAYAAAD+/wUAAQAEAAYAAAD+/wYAAQADAAUAAAD+/wcAAQAEAAIAAAD+/wgAAQADAAQAAAD//wgAAQAEAAYAAAD//wcAAQAGAAYAAAD//wYAAQAEAAIAAAD//wUAAQAFAAYAAAD//wQAAQAGAAIAAAD//wMAAQAEAAMAAAD//wIAAQAFAAYAAAD//wEAAQAFAAIAAAD//wAAAQAEAAYAAAD/////AQABAAMAAAD///7/AQAEAAYAAAD///3/AQAEAAQAAAD///z/AQAGAAQAAAD///r/AQAFAAYAAAD///n/AQAGAAEAAAD///j/AQAFAAYAAAD///f/AQAGAAYAAAAAAPf/AQAFAAMAAAAAAPj/AQAFAAUAAAAAAPn/AQADAAEAAAAAAPr/AQAEAAIAAAAAAPz/AQADAAYAAAAAAP3/AQADAAIAAAAAAP7/AQAFAAMAAAAAAP//AQADAAUAAAAAAAAAAQAEAAQAAAAAAAEAAQAFAAIAAAAAAAIAAQADAAUAAAAAAAMAAQAGAAYAAAAAAAQAAQABAAMAAAAAAAUAAQADAAUAAAAAAAYAAQADAAYAAAAAAAcAAQAFAAQAAAAAAAgAAQADAAIAAAABAAgAAQAEAAUAAAABAAcAAQAEAAIAAAABAAYAAQAFAAUAAAABAAUAAQAFAAQAAAABAAQAAQAFAAUAAAABAAMAAQABAAYAAAABAAIAAQAEAAMAAAABAAEAAQAGAAMAAAABAAAAAQABAAYAAAABAP//AQAFAAMAAAABAP7/AQADAAIAAAABAP3/AQAGAAMAAAABAPz/AQADAAYAAAABAPr/AQAFAAUAAAABAPn/AQAEAAEAAAABAPj/AQAEAAQAAAABAPf/AQABAAQAAAACAPf/AQAEAAMAAAACAPj/AQAFAAQAAAACAPn/AQAFAAEAAAACAPr/AQABAAMAAAACAPz/AQAGAAQAAAACAP3/AQABAAYAAAACAP7/AQAGAAYAAAACAP//AQADAAUAAAACAAAAAQABAAMAAAACAAEAAQADAAMAAAACAAIAAQABAAIAAAACAAMAAQAEAAMAAAACAAQAAQADAAIAAAACAAUAAQABAAIAAAACAAYAAQAEAAQAAAACAAcAAQABAAUAAAACAAgAAQADAAMAAAADAAgAAQADAAUAAAADAAcAAQABAAMAAAADAAYAAQAGAAQAAAADAAUAAQAFAAUAAAADAAQAAQADAAMAAAADAAMAAQADAAQAAAADAAIAAQABAAMAAAADAAEAAQAGAAUAAAADAAAAAQAFAAIAAAADAP//AQAEAAIAAAADAP7/AQABAAQAAAADAP3/AQAEAAIAAAADAPz/AQAGAAYAAAADAPr/AQAEAAMAAAADAPn/AQAGAAEAAAADAPj/AQAGAAQAAAADAPf/AQAGAAIAAAAEAPf/AQABAAQAAAAEAPj/AQABAAUAAAAEAPn/AQADAAEAAAAEAPr/AQAGAAQAAAAEAPz/AQAGAAUAAAAEAP3/AQAFAAIAAAAEAP7/AQAFAAUAAAAEAP//AQABAAIAAAAEAAAAAQADAAQAAAAEAAEAAQAEAAYAAAAEAAIAAQAFAAYAAAAEAAMAAQAGAAMAAAAEAAQAAQAEAAMAAAAEAAUAAQAEAAQAAAAEAAYAAQADAAMAAAAEAAcAAQAEAAUAAAAEAAgAAQABAAUAAAAFAAgAAQAFAAQAAAAFAAcAAQAEAAMAAAAFAAYAAQADAAQAAAAFAAUAAQAEAAYAAAAFAAQAAQABAAIAAAAFAAMAAQAGAAYAAAAFAAIAAQAGAAMAAAAFAAEAAQABAAUAAAAFAAAAAQABAAQAAAAFAP//AQAGAAMAAAAFAP7/AQAEAAIAAAAFAP3/AQAGAAUAAAAFAPz/AQAEAAMAAAAFAPr/AQAFAAUAAAAFAPn/AQAEAAEAAAAFAPj/AQAGAAIAAAAFAPf/AQAEAAYAAAAGAPf/AQAGAAMAAAAGAPj/AQABAAMAAAAGAPn/AQAFAAEAAAAGAPr/AQAFAAIAAAAGAPz/AQAFAAIAAAAGAP3/AQAFAAQAAAAGAP7/AQADAAUAAAAGAP//AQADAAIAAAAGAAAAAQAEAAYAAAAGAAEAAQABAAUAAAAGAAIAAQAEAAUAAAAGAAMAAQAGAAYAAAAGAAQAAQADAAUAAAAGAAUAAQADAAUAAAAGAAYAAQABAAIAAAAGAAcAAQAEAAQAAAAGAAgAAQAFAAUAAAAHAAgAAQABAAUAAAAHAAcAAQAFAAQAAAAHAAYAAQAEAAIAAAAHAAUAAQADAAYAAAAHAAQAAQAEAAYAAAAHAAMAAQADAAMAAAAHAAIAAQADAAMAAAAHAAEAAQAGAAIAAAAHAAAAAQAEAAQAAAAHAP//AQAEAAYAAAAHAP7/AQADAAMAAAAHAP3/AQAFAAIAAAAHAPz/AQABAAUAAAAHAPr/AQAGAAIAAAAHAPn/AQAGAAEAAAAHAPj/AQAEAAYAAAAHAPf/AQADAAQAAAAIAPf/AQAGAAYAAAAIAPj/AQAGAAMAAAAIAPn/AQADAAEAAAAIAPr/AQAEAAQAAAAIAPz/AQAGAAYAAAAIAP3/AQABAAMAAAAIAP7/AQAFAAUAAAAIAP//AQAFAAUAAAAIAAAAAQAGAAYAAAAIAAEAAQADAAYAAAAIAAIAAQADAAYAAAAIAAMAAQAFAAUAAAAIAAQAAQABAAYAAAAIAAUAAQADAAUAAAAIAAYAAQAEAAMAAAAIAAcAAQAEAAUAAAAIAAgAAQADAAYAAAAJAAgAAQAGAAUAAAAJAAcAAQADAAMAAAAJAAYAAQAEAAMAAAAJAAUAAQADAAMAAAAJAAQAAQADAAMAAAAJAAMAAQAGAAYAAAAJAAIAAQAGAAIAAAAJAAEAAQAGAAYAAAAJAAAAAQAFAAMAAAAJAP//AQAGAAYAAAAJAP7/AQADAAUAAAAJAP3/AQABAAMAAAAJAPz/AQAFAAQAAAAJAPr/AQAGAAQAAAAJAPn/AQAEAAEAAAAJAPj/AQAFAAUAAAAJAPf/AQAGAAUAAAAKAPf/AQAFAAUAAAAKAPj/AQAGAAMAAAAKAPn/AQAFAAEAAAAKAPr/AQABAAUAAAAKAPz/AQAEAAQAAAAKAP3/AQADAAYAAAAKAP7/AQABAAQAAAAKAP//AQAGAAYAAAAKAAAAAQAEAAQAAAAKAAEAAQAGAAIAAAAKAAIAAQAEAAIAAAAKAAMAAQADAAMAAAAKAAQAAQABAAQAAAAKAAUAAQAEAAUAAAAKAAYAAQAGAAUAAAAKAAcAAQADAAQAAAAKAAgAAQABAAYAAAALAAgAAQAFAAYAAAALAAcAAQAEAAIAAAALAAYAAQABAAQAAAALAAUAAQADAAUAAAALAAQAAQABAAIAAAALAAMAAQABAAIAAAALAAIAAQAFAAIAAAALAAEAAQAGAAQAAAALAAAAAQAFAAYAAAALAP//AQADAAQAAAALAP7/AQABAAUAAAALAP3/AQAEAAUAAAALAPz/AQADAAUAAAALAPr/AQAEAAYAAAALAPn/AQAGAAEAAAALAPj/AQADAAMAAAALAPf/AQABAAMAAAAMAPf/AQABAAIAAAAMAPj/AQABAAQAAAAMAPn/AQABAAEAAAAMAPr/AQABAAUAAAAMAPz/AQABAAMAAAAMAP3/AQABAAQAAAAMAP7/AQABAAYAAAAMAP//AQABAAQAAAAMAAAAAQABAAIAAAAMAAEAAQABAAUAAAAMAAIAAQABAAYAAAAMAAMAAQABAAIAAAAMAAQAAQABAAUAAAAMAAUAAQABAAQAAAAMAAYAAQABAAUAAAAMAAcAAQABAAYAAAAMAAgAAQABAAUAAAANAAgAAQACAAUAAAANAAcAAQACAAQAAAANAAYAAQACAAMAAAANAAUAAQACAAIAAAANAAQAAQACAAEAAAANAAMAAQACAAYAAAANAAIAAQACAAUAAAANAAEAAQACAAQAAAANAAAAAQACAAMAAAANAP//AQACAAIAAAANAP7/AQACAAEAAAANAP3/AQACAAYAAAANAPz/AQACAAUAAAANAPr/AQACAAMAAAANAPn/AQACAAEAAAANAPj/AQACAAYAAAANAPf/AQACAAUAAAAOAPf/AQAGAAQAAAAOAPj/AQAEAAYAAAAOAPn/AQADAAEAAAAOAPr/AQAGAAMAAAAOAPz/AQAFAAQAAAAOAP3/AQAGAAIAAAAOAP7/AQAGAAQAAAAOAP//AQAFAAUAAAAOAAAAAQAEAAIAAAAOAAEAAQAEAAQAAAAOAAIAAQADAAYAAAAOAAMAAQAGAAMAAAAOAAQAAQAFAAUAAAAOAAUAAQAFAAIAAAAOAAYAAQAGAAYAAAAOAAcAAQAEAAIAAAAOAAgAAQADAAQAAAAPAAgAAQAGAAUAAAAPAAcAAQAGAAYAAAAPAAYAAQAEAAUAAAAPAAUAAQAEAAQAAAAPAAQAAQAEAAYAAAAPAAMAAQAGAAUAAAAPAAIAAQADAAIAAAAPAAEAAQAEAAYAAAAPAAAAAQAEAAYAAAAPAP//AQAFAAYAAAAPAP7/AQAGAAIAAAAPAP3/AQAGAAIAAAAPAPz/AQAGAAUAAAAPAPr/AQAGAAIAAAAPAPn/AQAEAAEAAAAPAPj/AQAFAAMAAAAPAPf/AQAGAAIAAAAQAPf/AQAFAAQAAAAQAPj/AQAGAAMAAAAQAPn/AQAFAAEAAAAQAPr/AQADAAIAAAAQAPz/AQAFAAMAAAAQAP3/AQADAAIAAAAQAP7/AQADAAIAAAAQAP//AQAFAAUAAAAQAAAAAQAGAAUAAAAQAAEAAQAFAAUAAAAQAAIAAQAGAAMAAAAQAAMAAQAEAAIAAAAQAAQAAQAFAAYAAAAQAAUAAQADAAUAAAAQAAYAAQAFAAUAAAAQAAcAAQAEAAQAAAAQAAgAAQAGAAQAAADu//v/AQABAAMAAADv//v/AQABAAUAAADw//v/AQADAAMAAADx//v/AQAEAAYAAADy//v/AQAGAAIAAADz//v/AQAEAAQAAAD0//v/AQADAAUAAAD1//v/AQADAAMAAAD2//v/AQABAAIAAAD3//v/AQABAAYAAAD4//v/AQAEAAUAAAD5//v/AQADAAYAAAD6//v/AQABAAQAAAD7//v/AQABAAIAAAD8//v/AQAFAAMAAAD9//v/AQAFAAQAAAD+//v/AQADAAYAAAD///v/AQAGAAIAAAAAAPv/AQAEAAUAAAABAPv/AQAGAAUAAAACAPv/AQAFAAIAAAADAPv/AQAEAAUAAAAEAPv/AQAFAAUAAAAFAPv/AQAFAAUAAAAGAPv/AQAGAAQAAAAHAPv/AQAGAAYAAAAIAPv/AQABAAQAAAAJAPv/AQAGAAMAAAAKAPv/AQABAAYAAAALAPv/AQABAAIAAAAMAPv/AQABAAIAAAANAPv/AQACAAIAAAAOAPv/AQABAAIAAAAPAPv/AQADAAYAAAAQAPv/AQAFAAQAAAARAPv/AQABAAMAAAA=")
tile_set = ExtResource("2_xttr1")
rendering_quadrant_size = 32
metadata/_edit_lock_ = true

[node name="Lights" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="fg" type="TileMapLayer" parent="."]
use_parent_material = true
tile_set = ExtResource("2_xttr1")
metadata/_edit_lock_ = true

[node name="Floor" type="Node2D" parent="." groups=["InteractiveBlocks"]]
metadata/_edit_lock_ = true

[node name="Walls" type="Node2D" parent="." groups=["InteractiveBlocks"]]
metadata/_edit_lock_ = true

[node name="Platforms" type="Node2D" parent="." groups=["InteractiveBlocks"]]
metadata/_edit_lock_ = true

[node name="Decorations" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.654902)
metadata/_edit_lock_ = true

[node name="LinkLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(0, 1, 0, 1)
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
metadata/_edit_lock_ = true

[node name="Player" parent="Camera2D" node_paths=PackedStringArray("linker_ref") instance=ExtResource("3_odtnp")]
unique_name_in_owner = true
position = Vector2(-16, -48)
linker_ref = NodePath("../../Linker")

[node name="Linker" parent="." instance=ExtResource("4_bghdb")]

[node name="Projectiles" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="TutorialCanvas" type="CanvasLayer" parent="."]

[node name="TutorialOverlay" parent="TutorialCanvas" instance=ExtResource("5_put66")]
size_flags_vertical = 4

[node name="MinimapCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="MarginContainer" parent="MinimapCanvas"]
offset_right = 317.0
offset_bottom = 156.0
theme_override_constants/margin_left = 34
theme_override_constants/margin_top = 34
theme_override_constants/margin_right = 34
theme_override_constants/margin_bottom = 34

[node name="Minimap" parent="MinimapCanvas/Control" node_paths=PackedStringArray("player") instance=ExtResource("6_c657l")]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
player = NodePath("../../../Camera2D/Player")

[node name="ScreenShaker" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("7_nm33y")]
camera = NodePath("../Camera2D")
metadata/_edit_lock_ = true

[node name="Transition" parent="." instance=ExtResource("8_0ftc1")]
light_mask = 0
material = SubResource("CanvasItemMaterial_r6erj")
metadata/_edit_lock_ = true

[node name="PauseMenuCanvas" type="CanvasLayer" parent="."]
process_mode = 2
visible = false
follow_viewport_enabled = true

[node name="Container" type="Control" parent="PauseMenuCanvas"]
layout_mode = 3
anchor_left = -0.133
anchor_top = -0.158
anchor_right = 0.135
anchor_bottom = 0.203
offset_left = 0.216003
offset_top = 0.120003
offset_right = -5.52
offset_bottom = 0.0799866
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" parent="PauseMenuCanvas/Container" instance=ExtResource("9_ew0cm")]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -125.5
offset_bottom = 94.5

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.47
blend_mode = 1
range_item_cull_mask = 0
metadata/_edit_lock_ = true

[connection signal="gain_link" from="Camera2D/Player" to="." method="_on_player_gain_link"]
[connection signal="gain_sprint" from="Camera2D/Player" to="." method="_on_player_gain_sprint"]
[connection signal="gain_telekinesis" from="Camera2D/Player" to="." method="_on_player_gain_telekinesis"]
[connection signal="shoot_link_projectile" from="Camera2D/Player" to="." method="_on_player_shoot_link_projectile"]
[connection signal="shoot_tk_projectile" from="Camera2D/Player" to="." method="_on_player_shoot_tk_projectile"]
[connection signal="reset_click" from="PauseMenuCanvas/Container/PauseMenu" to="." method="_on_pause_menu_reset_click"]
[connection signal="resume_click" from="PauseMenuCanvas/Container/PauseMenu" to="." method="_on_pause_menu_resume_click"]
[connection signal="save_quit_click" from="PauseMenuCanvas/Container/PauseMenu" to="." method="_on_pause_menu_save_quit_click"]
